--- a/templates/admin/users.html.twig
+++ b/templates/admin/users.html.twig
@@ -2,30 +2,31 @@
 
 {% block mainadmin %}
 
-<h2>Users</h2>
+    <h2>Users</h2>
 
     <div class="table-responsive">
         <table class="table table-striped table-sm">
-        <thead>
+            <thead>
             <tr>
-            <th>#</th>
-            <th>Name</th>
-            <th>Last name</th>
-            <th>Email</th>
-            <th>Delete</th>
+                <th>#</th>
+                <th>Name</th>
+                <th>Last name</th>
+                <th>Email</th>
+                <th>Delete</th>
             </tr>
-        </thead>
-        <tbody>
-        {% for i in 1..10 %}
-            <tr>
-            <td>{{ i }}</td>
-            <td>Adam</td>
-            <td>Smith</td>
-            <td>adam@smith.com</td>
-            <td><a href="#" onclick="return confirm('Are you sure?');"><i class="fas fa-trash"></i></a></td>
-            </tr>
-        {% endfor %}
-        </tbody>
+            </thead>
+            <tbody>
+            {% for user in users %}
+                <tr>
+                    <td>{{ loop.index }}</td>
+                    <td>{{ user.name }}</td>
+                    <td>{{ user.lastName }}</td>
+                    <td>{{ user.email }}</td>
+                    <td><a href="{{ path('delete_user', {'user':user.id}) }}"
+                           onclick="return confirm('Are you sure?');"><i class="fas fa-trash"></i></a></td>
+                </tr>
+            {% endfor %}
+            </tbody>
         </table>
     </div>
 
