--- a/templates/admin/my_profile.html.twig
+++ b/templates/admin/my_profile.html.twig
@@ -27,7 +27,7 @@
         <p class="text-left">You don't have any plan. <a href="{{ path('pricing') }}">Get plan</a></p>
     {% endif %}
 
-    {{ form_start(form, {'attr': {'novalidate':'novalidate'}}) }}
+    {{ form_start(form) }}
 
     {% if is_granted('ROLE_ADMIN') %}
         <div class="form-group">
@@ -58,14 +58,14 @@
     </div>
     <div class="form-group">
         <label for="user_password_first">Password</label>
-        {{ form_widget(form.password.first, {'attr':{'class': is_invalid}}) }}
+        {{ form_widget(form.password.first, {'attr':{'class': is_invalid, 'required':'required'}}) }}
         <div class="invalid-feedback">
             {{ form_errors(form.password.first) }}
         </div>
     </div>
     <div class="form-group">
         <label for="user_password_second">Confirm Password</label>
-        {{ form_widget(form.password.second, {'attr':{'class': is_invalid}}) }}
+        {{ form_widget(form.password.second, {'attr':{'class': is_invalid, 'required':'required'}}) }}
         <div class="invalid-feedback">
             {{ form_errors(form.password.second) }}
         </div>
