--- a/templates/admin/my_profile.html.twig
+++ b/templates/admin/my_profile.html.twig
@@ -1,7 +1,7 @@
 {% extends 'admin/base.html.twig' %}
 
 {% block mainadmin %}
-    <h2>My profile <small><a onclick="return confirm('Are you sure?');" href="{{ path('delete_account') }}">delete
+    <h2>{% trans %}My profile{% endtrans %} <small><a onclick="return confirm('Are you sure?');" href="{{ path('delete_account') }}">delete
                 account</a></small></h2>
 
     {#    {% if not is_granted('ROLE_ADMIN') %} #}
